<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaxCal">

    <TextView
        android:id="@+id/text_types"
        android:layout_width="115dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_types"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_amount"
        android:layout_width="227dp"
        android:layout_height="32dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_amount"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/val_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alc_spinner"
        app:layout_constraintVertical_bias="0.931" />

    <TextView
        android:id="@+id/text_prices"
        android:layout_width="178dp"
        android:layout_height="32dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:text="@string/text_price"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/val_price"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cal_btn"
        android:layout_width="264dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/cal_btn"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/clear_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.967" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="264dp"
        android:layout_height="51dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="432dp"
        android:text="@string/clear_btn"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/val_amount"
        android:layout_width="173dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="104dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/text_prices"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/val_price"
        android:layout_width="173dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="104dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/cal_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/alc_spinner"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:entries="@array/alc_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_types"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="70dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="296dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/val_price"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/text_amount"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>